# FormalGrammars

./: .buildbot-devel  .mrconfig  .travis.yml  FormalGrammars.cabal  FormalLanguage.hs  GrammarPP.hs  README.md  Tests.hs  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  flake.nix  nightly-stack.yaml  shell.nix  stack.yaml
FormalLanguage/: CFG.hs  Grammar.hs  Parser.hs
FormalLanguage/CFG/: Grammar.hs  Outside.hs  Parser.hs  PrettyPrint.hs  QQ.hs  QuickCheck.hs  TH.hs  Test.hs  Tests.hs
FormalLanguage/CFG/Examples/: Global.hs  NeedlemanWunsch.hs  Nussinov.hs
FormalLanguage/CFG/Grammar/: Types.hs  Util.hs
FormalLanguage/CFG/PrettyPrint/: ANSI.hs  Haskell.hs  LaTeX.hs
FormalLanguage/CFG/TH/: Internal.hs
FormalLanguage/Grammar/: PrettyPrint.hs  QQ.hs  QuickCheck.hs  TH.hs  Tests.hs
FormalLanguage/Grammar/PrettyPrint/: ANSI.hs  Haskell.hs  LaTeX.hs
src/: DishonestCasino.hs  GrammarPP.hs  NeedlemanWunsch.hs  Nussinov.hs  Pseudo.hs  TriNeedle.hs  TwoTableNussinov.hs
tests/: parsing.gra  properties.hs  pseudo.gra
