name:           FormalGrammars
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2013
copyright:      Christian Hoener zu Siederdissen, 2013
homepage:       http://www.tbi.univie.ac.at/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Formal Languages, Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
synopsis:
                Grammars in formal language theory
description:
                Grammars in formal language theory are sets of production
                rules, non-terminal and terminal symbols. This library provides
                basic data types and functions to manipulate such grammars. In
                addition, QuasiQuoting functionality is provided to turn a
                grammar into Haskell types and functions. These work
                efficiently together with ADPfusion. In addition,
                pretty-printing functionality allows representations in LaTeX.

Extra-Source-Files:

library
  build-depends:
    base >= 4 && < 5 ,
    ADPfusion             >= 0.2  ,
    ansi-wl-pprint        >= 0.6  ,
    bytestring            >= 0.10 ,
    containers                    ,
    data-default          >= 0.5  ,
    HaTeX                         ,
    lens                  >= 3.9  ,
    mtl                           ,
    parsers               >= 0.9  ,
    repa                  >= 3.2  ,
    template-haskell              ,
    text                          ,
    transformers          >= 0.3  ,
    trifecta              >= 1.2  ,
    unordered-containers  >= 0.2
  exposed-modules:
    FormalLanguage
    FormalLanguage.Grammar
    FormalLanguage.Grammar.PrettyPrint
    FormalLanguage.Grammar.PrettyPrint.ANSI
    FormalLanguage.Grammar.PrettyPrint.LaTeX
    FormalLanguage.Grammar.QuickCheck
--    FormalLanguage.Grammar.Tests
    FormalLanguage.Parser
  ghc-options:

-- A Simple pretty-printer for formal grammars.

executable GrammarPP
  build-depends:
    cmdargs == 0.10.*
  main-is:
    GrammarPP.hs

source-repository head
  type: git
  location: git://github.com/choener/FormalGrammars

